<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dance For Health</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_workout">Create a New Workout</string>
    <string name="title_activity_prev_workout">PrevWorkoutActivity</string>
    <string name="title_activity_heart_rate">Measure Your Heart Rate</string>
    <string name="title_activity_rating">Rate How You Feel Post-Workout</string>
    <string name="title_activity_weight_and_steps">Input Your Weight and Steps Taken</string>
    <string name="title_activity_loading_screen">Loading Screen</string>
    <string name="rating_header">Please rate how you feel at the moment about the workout you have been doing</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string-array name="workouts_array">
        <item>Dance</item>
        <item>Run</item>
        <item>Walk</item>
        <item>Bike</item>
        <item>Swim</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_heart_rate_two">Measure Your Heart Rate Part Two</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_week_progress">WeekProgressActivity</string>
    <string name="title_activity_month_progress">MonthProgressActivity</string>
    <string name="title_activity_year_progress">YearProgressActivity</string>

</resources>
